--- a/movieWindow.xaml
+++ b/movieWindow.xaml
@@ -81,14 +81,16 @@
         </Style>
     </Window.Resources>
 
-    <Grid x:Name="movieGrid" Background="Black" Margin="0,0,0,-109">
-        <Image x:Name="playButton" Margin="372,189,379,194" Source="/playButton.png" Stretch="Fill" Cursor="Hand" MouseLeftButtonUp="playButton_MouseLeftButtonUp" Width="50" Height="50" MouseEnter="playButton_MouseEnter" MouseLeave="playButton_MouseLeave"/>
-        <Grid x:Name="playerGrid" HorizontalAlignment="Center" Height="500" VerticalAlignment="Center" Width="800">
-            <Rectangle x:Name="movieBorder" HorizontalAlignment="Center" Height="500" Stroke="#FFE92E1B" VerticalAlignment="Center" Width="800" Fill="Black" MouseEnter="movieBorder_MouseEnter" MouseLeave="movieBorder_MouseLeave"/>
-            <Grid x:Name="controlsGrid" HorizontalAlignment="Center" Height="48" Margin="0,452,0,0" VerticalAlignment="Top" Width="800">
+    <Grid x:Name="movieGrid" Margin="0,0,0,-109" Background="Black">
+        <Grid x:Name="playerGrid" HorizontalAlignment="Center" Height="500" VerticalAlignment="Center" Width="800" MouseEnter="playerGrid_MouseEnter" MouseLeave="playerGrid_MouseLeave" MouseMove="playerGrid_MouseMove">
+
+
+            <Rectangle x:Name="movieBorder" HorizontalAlignment="Left" Height="500" Stroke="#FFE92E1B" VerticalAlignment="Top" Width="800" Fill="Black"/>
+            <Grid x:Name="controlsGrid" HorizontalAlignment="Left" Height="48" Margin="0,452,0,0" VerticalAlignment="Top" Width="800">
                 <Slider x:Name="slider" Thumb.DragCompleted="slider_DragCompleted" Style="{StaticResource Horizontal_Slider}" HorizontalAlignment="Left" Height="10" Margin="10,0,0,0" VerticalAlignment="Center" Width="728" Foreground="#FFF12612" RenderTransformOrigin="3.053,1.164"/>
-                <Image x:Name="fullScreenButton" Height="20" VerticalAlignment="Center" Source="/fullScreenButton.png" Cursor="Hand" MouseLeftButtonUp="fullScreenButton_MouseLeftButtonUp" HorizontalAlignment="Left" MouseEnter="fullScreenButton_MouseEnter" ToolTip="Full Screen" Margin="764,0,0,0" Width="20" RenderTransformOrigin="1.688,1.127"/>
+                <Image x:Name="fullScreenButton" Height="20" VerticalAlignment="Center" Source="/fullScreenButton.png" Cursor="Hand" MouseLeftButtonUp="fullScreenButton_MouseLeftButtonUp" HorizontalAlignment="Left" ToolTip="Full Screen" Margin="764,0,0,0" Width="20" RenderTransformOrigin="1.688,1.127"/>
             </Grid>
+            <Image x:Name="playButton" Margin="375,225,375,225" Source="/playButton.png" Stretch="Fill" Cursor="Hand" MouseLeftButtonUp="playButton_MouseLeftButtonUp" Width="50" Height="50"/>
         </Grid>
 
 
