--- a/movieWindow.xaml
+++ b/movieWindow.xaml
@@ -81,16 +81,23 @@
         </Style>
     </Window.Resources>
 
-    <Grid x:Name="movieGrid" Margin="0,0,0,-109" Background="Black">
-        <Grid x:Name="playerGrid" HorizontalAlignment="Center" Height="500" VerticalAlignment="Center" Width="800" MouseEnter="playerGrid_MouseEnter" MouseLeave="playerGrid_MouseLeave" MouseMove="playerGrid_MouseMove">
+    <Grid x:Name="movieGrid" Background="Black" Margin="-170,-59,-178,-74">
+        <Grid x:Name="playerGrid" HorizontalAlignment="Center" Height="500" VerticalAlignment="Top" Width="800" MouseEnter="playerGrid_MouseEnter" MouseLeave="playerGrid_MouseLeave" MouseMove="playerGrid_MouseMove" Margin="0,346,0,0">
 
 
-            <Rectangle x:Name="movieBorder" HorizontalAlignment="Left" Height="500" Stroke="#FFE92E1B" VerticalAlignment="Top" Width="800" Fill="Black"/>
-            <Grid x:Name="controlsGrid" HorizontalAlignment="Left" Height="48" Margin="0,452,0,0" VerticalAlignment="Top" Width="800">
-                <Slider x:Name="slider" Thumb.DragCompleted="slider_DragCompleted" Style="{StaticResource Horizontal_Slider}" HorizontalAlignment="Left" Height="10" Margin="10,0,0,0" VerticalAlignment="Center" Width="728" Foreground="#FFF12612" RenderTransformOrigin="3.053,1.164"/>
-                <Image x:Name="fullScreenButton" Height="20" VerticalAlignment="Center" Source="/fullScreenButton.png" Cursor="Hand" MouseLeftButtonUp="fullScreenButton_MouseLeftButtonUp" HorizontalAlignment="Left" ToolTip="Full Screen" Margin="764,0,0,0" Width="20" RenderTransformOrigin="1.688,1.127"/>
+            <Rectangle x:Name="movieBorder" HorizontalAlignment="Center" Height="500" Stroke="#FFE92E1B" VerticalAlignment="Center" Width="800" Fill="Black"/>
+            <Grid x:Name="controlsGrid" HorizontalAlignment="Center" Height="47" Margin="0,453,0,0" VerticalAlignment="Top" Width="780">
+                <Border x:Name="controlsBorder" BorderThickness="1" HorizontalAlignment="Center" Height="48" VerticalAlignment="Center" Width="780" Background="#FF4E4D4D" Opacity="0.5" CornerRadius="7,7,7,7" Visibility="Visible"/>
+                <Image x:Name="fullScreenButton" HorizontalAlignment="Left" Height="22" Margin="743,0,0,0" VerticalAlignment="Center" Width="22" Source="/fullScreenButton.png" Cursor="Hand" MouseLeftButtonUp="fullScreenButton_MouseLeftButtonUp_1"/>
+                <Slider x:Name="slider" Thumb.DragCompleted="slider_DragCompleted" Style="{StaticResource Horizontal_Slider}" HorizontalAlignment="Center" Height="0" VerticalAlignment="Center" Width="694" Foreground="#FFF12612" RenderTransformOrigin="3.053,1.164"/>
+                <Image x:Name="smallPlayButton" HorizontalAlignment="Left" Height="25" Margin="6,0,0,0" VerticalAlignment="Center" Width="25" Source="/smallPlayButton.png"/>
             </Grid>
-            <Image x:Name="playButton" Margin="375,225,375,225" Source="/playButton.png" Stretch="Fill" Cursor="Hand" MouseLeftButtonUp="playButton_MouseLeftButtonUp" Width="50" Height="50"/>
+            <Image x:Name="playButton" Margin="375,225,375,225" Source="/playButton.png" Stretch="Fill" Cursor="Hand" MouseLeftButtonUp="playButton_MouseLeftButtonUp" Width="60" Height="60"/>
+        </Grid>
+        <Grid x:Name="titleGrid" HorizontalAlignment="Center" Height="210" Margin="0,119,0,0" VerticalAlignment="Top" Width="962">
+            <Image x:Name="coverImage" HorizontalAlignment="Left" Height="203" VerticalAlignment="Top" Width="138"/>
+            <TextBlock x:Name="metadataBlock" HorizontalAlignment="Left" Height="190" Margin="462,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="500" Foreground="White" FontSize="14"/>
+            <TextBlock x:Name="titleLabel" HorizontalAlignment="Left" Height="110" Margin="147,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="310" FontSize="20" Foreground="White" FontWeight="Bold" TextAlignment="Center"/>
         </Grid>
 
 
