--- a/searchResultsPage1.xaml
+++ b/searchResultsPage1.xaml
@@ -19,7 +19,7 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <Image x:Name="image1" HorizontalAlignment="Left" Height="225" Margin="10,10,0,0" VerticalAlignment="Top" Width="150" Stretch="Fill" MouseLeftButtonUp="image1_MouseLeftButtonUp"/>
-            <Image x:Name="image2" HorizontalAlignment="Left" Height="225" Margin="224,10,0,0" VerticalAlignment="Top" Width="150" Stretch="Fill"/>
+            <Image x:Name="image2" HorizontalAlignment="Left" Height="225" Margin="224,10,0,0" VerticalAlignment="Top" Width="150" Stretch="Fill" MouseLeftButtonUp="image2_MouseLeftButtonUp"/>
             <Image x:Name="image3" HorizontalAlignment="Left" Height="225" Margin="444,10,0,0" VerticalAlignment="Top" Width="150" Stretch="Fill" Grid.ColumnSpan="2"/>
             <Image x:Name="image4" HorizontalAlignment="Left" Height="225" Margin="141,10,0,0" VerticalAlignment="Top" Width="150" Stretch="Fill" Grid.Column="1"/>
             <Image x:Name="image5" HorizontalAlignment="Left" Height="225" Margin="354,10,0,0" VerticalAlignment="Top" Width="150" Grid.Column="1" Stretch="Fill"/>
