--- a/movieWindow.xaml
+++ b/movieWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="movies.movieWindow"
+﻿<Window x:Name="playerWindow" x:Class="movies.movieWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:movies"
-        mc:Ignorable="d" Height="736" Width="800" WindowState="Maximized" KeyDown="Window_KeyDown" Closed="Window_Closed" SnapsToDevicePixels="True">
+        mc:Ignorable="d" Height="1165" Width="1920" WindowState="Maximized" KeyDown="Window_KeyDown" SnapsToDevicePixels="True" HorizontalAlignment="Center" VerticalAlignment="Center" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.CanContentScroll="True">
 
     <Window.Resources>
 
@@ -80,28 +80,44 @@
             </Style.Triggers>
         </Style>
     </Window.Resources>
+    <ScrollViewer x:Name="scrollViewer" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden">
+        <Grid x:Name="movieGrid" Background="Black" Margin="-210,-59,-210,-74" Height="1170" Width="1921">
 
-    <Grid x:Name="movieGrid" Background="Black" Margin="-170,-59,-178,-74">
-        <Grid x:Name="playerGrid" HorizontalAlignment="Center" Height="500" VerticalAlignment="Top" Width="800" MouseEnter="playerGrid_MouseEnter" MouseLeave="playerGrid_MouseLeave" MouseMove="playerGrid_MouseMove" Margin="0,346,0,0">
+
+            <Grid x:Name="playerGrid" HorizontalAlignment="Center" Height="500" VerticalAlignment="Top" Width="800" MouseEnter="playerGrid_MouseEnter" MouseLeave="playerGrid_MouseLeave" MouseMove="playerGrid_MouseMove" Margin="0,200,0,0">
 
 
-            <Rectangle x:Name="movieBorder" HorizontalAlignment="Center" Height="500" Stroke="#FFE92E1B" VerticalAlignment="Center" Width="800" Fill="Black"/>
-            <Grid x:Name="controlsGrid" HorizontalAlignment="Center" Height="47" Margin="0,453,0,0" VerticalAlignment="Top" Width="780">
-                <Border x:Name="controlsBorder" BorderThickness="1" HorizontalAlignment="Center" Height="48" VerticalAlignment="Center" Width="780" Background="#FF4E4D4D" Opacity="0.5" CornerRadius="7,7,7,7" Visibility="Visible"/>
-                <Image x:Name="fullScreenButton" HorizontalAlignment="Left" Height="22" Margin="743,0,0,0" VerticalAlignment="Center" Width="22" Source="/fullScreenButton.png" Cursor="Hand" MouseLeftButtonUp="fullScreenButton_MouseLeftButtonUp_1"/>
-                <Slider x:Name="slider" Thumb.DragCompleted="slider_DragCompleted" Style="{StaticResource Horizontal_Slider}" HorizontalAlignment="Center" Height="0" VerticalAlignment="Center" Width="694" Foreground="#FFF12612" RenderTransformOrigin="3.053,1.164"/>
-                <Image x:Name="smallPlayButton" HorizontalAlignment="Left" Height="25" Margin="6,0,0,0" VerticalAlignment="Center" Width="25" Source="/smallPlayButton.png"/>
+                <Rectangle x:Name="movieBorder" HorizontalAlignment="Center" Height="500" Stroke="#FFE92E1B" VerticalAlignment="Center" Width="800" Fill="Black" RadiusX="10" RadiusY="10"/>
+                <Grid x:Name="controlsGrid" HorizontalAlignment="Center" Height="47" Margin="0,443,0,0" VerticalAlignment="Top" Width="780">
+                    <Border x:Name="controlsBorder" BorderThickness="1" HorizontalAlignment="Center" Height="48" VerticalAlignment="Center" Width="780" Background="#FF4E4D4D" Opacity="0.5" CornerRadius="7,7,7,7" Visibility="Visible"/>
+                    <Image x:Name="fullScreenButton" HorizontalAlignment="Left" Height="22" Margin="743,0,0,0" VerticalAlignment="Center" Width="22" Source="/fullScreenButton.png" Cursor="Hand" MouseLeftButtonUp="fullScreenButton_MouseLeftButtonUp_1"/>
+                    <Slider x:Name="slider" Thumb.DragCompleted="slider_DragCompleted" Style="{StaticResource Horizontal_Slider}" HorizontalAlignment="Center" Height="0" VerticalAlignment="Center" Width="694" Foreground="#FFF12612" RenderTransformOrigin="3.053,1.164"/>
+                    <Image x:Name="smallPlayButton" HorizontalAlignment="Left" Height="25" Margin="6,0,0,0" VerticalAlignment="Center" Width="25" Source="/smallPlayButton.png"/>
+                </Grid>
+                <Image x:Name="playButton" Margin="375,225,375,225" Source="/playButton.png" Stretch="Fill" Cursor="Hand" MouseLeftButtonUp="playButton_MouseLeftButtonUp" Width="60" Height="60"/>
             </Grid>
-            <Image x:Name="playButton" Margin="375,225,375,225" Source="/playButton.png" Stretch="Fill" Cursor="Hand" MouseLeftButtonUp="playButton_MouseLeftButtonUp" Width="60" Height="60"/>
-        </Grid>
-        <Grid x:Name="titleGrid" HorizontalAlignment="Center" Height="210" Margin="0,119,0,0" VerticalAlignment="Top" Width="962">
-            <Image x:Name="coverImage" HorizontalAlignment="Left" Height="203" VerticalAlignment="Top" Width="138"/>
-            <TextBlock x:Name="metadataBlock" HorizontalAlignment="Left" Height="190" Margin="462,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="500" Foreground="White" FontSize="14"/>
-            <TextBlock x:Name="titleLabel" HorizontalAlignment="Left" Height="110" Margin="147,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="310" FontSize="20" Foreground="White" FontWeight="Bold" TextAlignment="Center"/>
-        </Grid>
+            <Grid x:Name="titleGrid" HorizontalAlignment="Center" Height="320" Margin="0,765,0,0" VerticalAlignment="Top" Width="990">
+                <Border BorderThickness="1" HorizontalAlignment="Center" Height="320" VerticalAlignment="Center" Width="990" Background="#FF101010" CornerRadius="10,10,10,10"/>
+                <TextBlock x:Name="metadataBlock" HorizontalAlignment="Left" Height="195" Margin="207,99,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="735" Foreground="White" FontSize="14"/>
+                <TextBlock x:Name="titleLabel" HorizontalAlignment="Left" Height="63" Margin="207,31,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="413" FontSize="20" Foreground="White" FontWeight="Bold" TextAlignment="Center"/>
+                <Border x:Name="coverImage" BorderThickness="1" HorizontalAlignment="Left" Height="251" Margin="10,10,0,0" VerticalAlignment="Top" Width="175" CornerRadius="4,4,4,4">
+                    <Border.Background>
+                        <ImageBrush Stretch="Uniform"/>
+                    </Border.Background>
+                </Border>
+            </Grid>
+            <Label Content="" HorizontalAlignment="Center" Height="49" Margin="0,1137,0,0" VerticalAlignment="Top" Width="264" Foreground="{x:Null}"/>
+            <Border x:Name="homeImage" BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="57" Margin="217,77,0,0" VerticalAlignment="Top" Width="145" CornerRadius="5,5,5,5" MouseLeftButtonUp="homeImage_MouseLeftButtonUp">
+                <Border.Background>
+                    <ImageBrush Stretch="UniformToFill" ImageSource="/NdTLIY.jpg"/>
+                </Border.Background>
+            </Border>
+            <Label x:Name="backLabel" Content="&lt; Back to search" HorizontalAlignment="Left" Height="24" Margin="562,153,0,0" VerticalAlignment="Top" Width="106" Foreground="White" MouseLeftButtonUp="Label_MouseLeftButtonUp" Cursor="Hand"/>
 
 
-    </Grid>
+
+        </Grid>
+    </ScrollViewer>
 
 </Window>
     
