--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,17 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Speraum Movies" Height="450" Width="800" SnapsToDevicePixels="True">
-    <Grid Background="#FF383838" HorizontalAlignment="Stretch" Height="Auto" VerticalAlignment="Stretch" Width="Auto">
+        Title="Speraum Movies" Height="695" Width="1042" SnapsToDevicePixels="True">
+    <Grid Background="#FF383838" Height="Auto" Width="Auto" Margin="-250,0,-252,-302">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Frame x:Name="MainFrame" Content="" Grid.ColumnSpan="2" Opacity="100" NavigationUIVisibility="Hidden" Panel.ZIndex="1" Background="Black"/>
+        <Frame x:Name="MainFrame" Content="" Grid.ColumnSpan="2" Opacity="100" NavigationUIVisibility="Hidden" Panel.ZIndex="1" Background="#FF231F20" Margin="250,0,252,10"/>
         <Label x:Name="noResultsLabel" Content="" HorizontalAlignment="Center" Height="33" Margin="0,250,0,0" VerticalAlignment="Top" Width="308" Grid.Column="1" Foreground="#FFFDFCFC" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="16"/>
         <Border x:Name="searchBorder" x:FieldModifier="public" BorderBrush="#FFF34409" BorderThickness="1,1,1,1" HorizontalAlignment="Center" Height="51"  VerticalAlignment="Top" Width="611" CornerRadius="25,25,25,25" RenderTransformOrigin="-0.697,0.506" Grid.Column="1" Margin="0,170,0,0" Background="#FFE4E5EB" Opacity="0.99" Panel.ZIndex="2">
             <TextBox x:Name="searchBar" HorizontalAlignment="Center" x:FieldModifier="public" VerticalContentAlignment="Center" Height="26" TextWrapping="Wrap" VerticalAlignment="Center" Width="548" BorderThickness="0,0,0,0" Background="#FFE4E5EB" KeyDown="searchBar_KeyDown" FontFamily="Roboto" FontSize="16" HorizontalContentAlignment="Left" />
         </Border>
+        <Image x:Name="logo" HorizontalAlignment="Left" Height="82" Margin="371,41,0,0" VerticalAlignment="Top" Width="116" Source="/Logo.jpg" Grid.ColumnSpan="2" Panel.ZIndex="3"/>
 
 
     </Grid>
